# open-brain-mcp

./: .env.example  .gitignore  README.md  ai.py  cli.py  config.py  db.py  plan.md  prompt.md  pyproject.toml  requirements.txt  run.sh  server.py  sprint1.md  sprint4.md  sprint5.md
docs/: SKILL.md
plan/: sprint2.md  sprint3.md
scripts/: cli.sh  server.sh
tests/: conftest.py  test_ai.py  test_cli.py  test_config.py  test_db.py  test_server.py
