[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-brain-mcp"
version = "0.2.0"
description = "Personal thought storage MCP server with semantic vector search"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "open-brain-mcp contributors"}
]
keywords = ["mcp", "vector-search", "thought-storage", "sqlite", "openrouter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=1.0.0",
    "httpx>=0.27.0",
    "sqlite-vec>=0.1.6",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
open-brain = "cli:main"

[project.urls]
Homepage = "https://github.com/user/open-brain-mcp"
Documentation = "https://github.com/user/open-brain-mcp#readme"
Repository = "https://github.com/user/open-brain-mcp"

[tool.setuptools]
packages = ["."]

[tool.setuptools.package-data]
"*" = ["*.py"]

# === Testing ===
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

# === Coverage ===
[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# === Ruff (Linter) ===
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["config", "db", "ai", "server", "cli"]

# === MyPy (Type Checker) ===
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["sqlite_vec.*", "fastmcp.*"]
ignore_missing_imports = true
